--- a/Prefecture/html/suspects.html
+++ b/Prefecture/html/suspects.html
@@ -114,7 +114,7 @@
 
 
 		<footer class="card-footer">
-			<p> Copyright - Laetitia Monnier 2018 - Ludus Académie </p>
+			<p> Copyright - Laetitia Monnier 2018 </p>
 		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
